# countIT

./: README.md
.github/workflows/: deploy.yml
backend/: Dockerfile  README.md  alembic.ini  build.sh  kill_db.py  pyproject.toml  requirements.txt  start.sh
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260425_0001_init_users_refresh_tokens.py  20260426_0001_add_user_day_and_custom_macros.py
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  refresh_token.py  user.py  user_day.py
backend/app/routers/: __init__.py  auth.py  days.py  me.py  products.py
backend/app/schemas/: auth.py
backend/app/security/: passwords.py  tokens.py
backend/app/services/: openfoodfacts.py  usda.py
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/lib/: api.ts
